# femm

./: .gitignore
.trae/rules/: project_rules.md
cpp_prototype/: .gitignore  CMakeLists.txt  CMakeLists_correct.txt  CMakeLists_simple.txt  ElmerCpp.h  ElmerCpp_Migration_Plan.md  FortranInterface.h  README.md  build.bat  clean_and_build.bat  compile_fix.bat  final_build.bat  final_fix.bat  fix_all_issues.ps1  fix_compilation.bat  fix_includes.bat  fix_includes.ps1  fix_mpi_issues.ps1  git_commit.bat  main.cpp  organize_files.bat  rebuild.bat  setup_vs_env.bat  simple_fix.bat  simple_logger_test.cpp  test_boundary_conditions.cpp  test_boundary_functions.cpp  test_boundary_simple.cpp  test_iterative_solver_simple.cpp  test_magnetic_solve.cpp  test_matrix_simple.cpp  test_wedge_functions.cpp  verify_fix.cpp
cpp_prototype/build_new/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
cpp_prototype/build_test/googletest/googlemock/gmock.dir/Release/: gmock.lib.recipe
cpp_prototype/build_test/test_simple.dir/Release/: test_simple.exe.recipe
cpp_prototype/build_test/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
cpp_prototype/docs/: advanced_design_patterns.md  compilation_guide.md  compilation_issues.md  daily_log.md  development_guide.md  sparse_solver_framework.md
cpp_prototype/plan/: design.md  magnetic_solver_translation_plan.md  next_translation_plan.md  requirements.md  shape_function_interface_plan.md  tasks.md
cpp_prototype/src/: BoundaryConditions.cpp  BoundaryConditions.h  CRSMatrix.cpp  CRSMatrix.h  DefUtils.cpp  DefUtils.h  DistributedLinearAlgebra.h  DomainDecomposition.cpp  DomainDecomposition.h  ElectromagneticMaterial.h  ElementDescription.cpp  ElementDescription.h  ElementMatrix.cpp  ElementMatrix.h  ElementUtils.cpp  ElementUtils.h  ElmerCpp.h  ElmerSolver.cpp  ElmerSolver.h  GaussIntegration.h  HeatSolver.cpp  HeatSolver.h  HeatTransferSolver.cpp  HeatTransferSolver.h  InputFileParser.cpp  Integration.cpp  Integration.h  Interpolation.cpp  Interpolation.h  IterativeSolver.cpp  IterativeSolver.h  IterativeSolver_fixed.cpp  LinearAlgebra.cpp  LinearAlgebra.h  Lists.cpp  Lists.h  LoggerFactory.cpp  LoggerInterface.h  MPICommunicator.h  MPIConfig.cpp  (+36 more)
cpp_prototype/src/binio/: kinds.f90
cpp_prototype/src/boundary/: BoundaryConditions.cpp  BoundaryConditions.h
cpp_prototype/src/core/base/: SolverBase.h  SolverRegistry.h  Types.h
cpp_prototype/src/core/logging/: LoggerFactory.cpp  LoggerFactory.h  LoggerInterface.h  SpdlogAdapter.h
cpp_prototype/src/core/math/: CRSMatrix.cpp  CRSMatrix.h  IterativeSolver.cpp  LinearAlgebra.cpp  LinearAlgebra.h  LinearSolverFactory.cpp  LinearSolverFactory.h  LinearSolverInterface.h  Matrix.cpp  MumpsSolver.cpp  MumpsSolver.h  SparseMatrix.cpp  SparseMatrix.h  SuperLUMTSolver.cpp  SuperLUMTSolver.h  SuperLUSolver.cpp  SuperLUSolver.h
cpp_prototype/src/core/mesh/: ElementDescription.cpp  ElementDescription.h  Mesh.h  MeshIO.cpp  MeshIO.h  MeshUtils.cpp  MeshUtils.h
cpp_prototype/src/core/utils/: CommonConstants.h  DefUtils.cpp  ElementUtils.cpp  GaussIntegration.cpp  GaussIntegration.h  Integration.cpp  Integration.h  Interpolation.cpp  Interpolation.h  Lists.cpp  Lists.h  MainUtils.cpp  MainUtils.h  ShapeFunctions.cpp  ShapeFunctions.h
cpp_prototype/src/io/input/: InputFileParser.h
cpp_prototype/src/parallel/domain/: DomainDecomposition.h  ParallelLinearSolver.h
cpp_prototype/src/parallel/mpi/: DistributedLinearAlgebra.cpp  DistributedLinearAlgebra.h  MPICommunicator.h  MPIConfig.h
cpp_prototype/src/parallel/openmp/: ParallelMatrixAssembly.h
cpp_prototype/src/solvers/: ElmerSolver.cpp  ElmerSolver.h
cpp_prototype/src/solvers/base/: NonlinearSolver.h
cpp_prototype/src/solvers/electromagnetic/: ElectromagneticMaterial.h  MagneticSolver.cpp  MagneticSolver.h  MagnetoDynamics2DSolver.cpp  MagnetoDynamics2DSolver.h  MagnetoDynamics3DSolver.cpp  MagnetoDynamics3DSolver.h  MagnetoDynamicsSolverBase.cpp  MagnetoDynamicsSolverBase.h  MagnetoDynamicsSolverFactory.cpp  MagnetoDynamicsSolverFactory.h  MagnetodynamicsSolver.h
cpp_prototype/src/solvers/thermal/: HeatSolver.cpp  HeatSolver.h  HeatTransferSolver.cpp  HeatTransferSolver.h
cpp_prototype/test/: benchmark_magnetodynamics2d.cpp  simple_test.cpp  test_advanced_boundary_functions.cpp  test_boundary_conditions.cpp  test_boundary_conditions_comprehensive.cpp  test_boundary_conditions_priority.cpp  test_boundary_functions.cpp  test_crs_matrix.cpp  test_def_utils.cpp  test_element_description.cpp  test_element_utils.cpp  test_elmer_solver.cpp  test_harmonic_analysis.cpp  test_input_parser.cpp  test_integration.cpp  test_interpolation.cpp  test_linear_algebra.cpp  test_lists.cpp  test_logger.cpp  test_magnetic_solve.cpp  test_magnetic_solver.cpp  test_magnetodynamics2d_solver.cpp  test_matrix_assembly.cpp  test_mesh.cpp  test_mpi_magnetodynamics2d.cpp  test_multiphysics.cpp  test_multiphysics_solver_new.cpp  test_nonlinear_materials.cpp  test_p_element_functions.cpp  test_parallel_linear_solver.cpp  test_shape_functions.cpp  test_shapefunctions.cpp  test_simple.cpp  test_sparse_solver_framework.cpp  test_sparse_solver_framework_simple.cpp
cpp_prototype/tests/: test_BasicPrecision.cpp  test_ElmerSolver.cpp  test_NumericalPrecision.cpp  test_SimplePrecision.cpp
tests/BlockLinElast2bMany/: beams.grd
tests/BlockPoisson2/: PoissonAssembly.f90
tests/BlockPoisson3/: BlockPoissonAssembly.f90
tests/ChannelFlowCoulomb/: rect.grd
tests/ConstantUnknownPotStatCurrent2/: angle.grd
tests/CoupledPoisson1/: PoissonAssembly.f90
tests/CoupledPoisson3/: PoissonAssembly.f90
tests/CoupledPoisson6/: PoissonAssembly.f90
tests/CoupledPoisson9/: PoissonAssembly.f90
tests/CurvedBoundaryPatchH/: sinus3d.grd
tests/ElastPelem2dPmultg/: angle.grd
tests/ElastPelem2dTri/: angle.grd
tests/ElmerGridConvertFvcom/: fvcom_test.2dm
tests/FilmFlowPipe/: line.grd  rect.grd
tests/FilmFlowPlane3/: rect.grd
tests/FluxIntegralBCTemperature/: squares.grd
tests/IntegralConstraintFlow/: square.grd
tests/IntegralConstraintHartmann/: beam.grd
tests/MeshLevelsRestart/: square.grd
(+13 files in other folders)
